@@ -5,6 +5,8 @@
 Unreleased
 ==========
 
+ - Updated dependency: guzzlehttp/guzzle to ~6.0
+
 2016/01/18 0.4.0
 ================
 
